# agentmail

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  DESIGN.md  LICENSE  MCP.md  README.md  build-universal.sh  ci-check.sh
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/agentmail/: Cargo.toml  README.md
crates/agentmail-mcp/: Cargo.toml
crates/agentmail-mcp/src/: lib.rs  main.rs
crates/agentmail/src/: config.rs  connection.rs  draft.rs  imap_client.rs  lib.rs  parser.rs  provider.rs  types.rs
crates/mailkit/: Cargo.toml
crates/mailkit-mcp/: Cargo.toml
crates/mailkit-mcp/src/: main.rs
crates/mailkit/src/: config.rs  connection.rs  content.rs  credentials.rs  draft.rs  error.rs  imap_client.rs  lib.rs  parser.rs  types.rs
src/: config.rs  connection.rs  content.rs  credentials.rs  error.rs  imap_client.rs  lib.rs  main.rs  mcp.rs  parser.rs  provider.rs  secret.rs  types.rs
