[package]
name = "agentmail-app"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
description = "MCP server and CLI for agentmail — connects AI agents to email via IMAP"
repository = "https://github.com/weekendsuperhero-io/agentmail"
documentation = "https://docs.rs/agentmail-app"
homepage = "https://github.com/weekendsuperhero-io/agentmail"
readme = "../../README.md"
keywords = ["email", "imap", "mcp", "agent", "cli"]
categories = ["command-line-utilities", "email"]
authors = ["WeekendSuperhero <hello@weekendsuperhero.io>"]
rust-version = "1.94"

[lib]
name = "agentmail_mcp"
path = "src/lib.rs"

[[bin]]
name = "agentmail"
path = "src/main.rs"

[dependencies]
agentmail.workspace = true
clap.workspace = true
rmcp = { workspace = true, features = ["transport-async-rw", "transport-worker"] }
schemars.workspace = true
secret-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber.workspace = true
uuid.workspace = true
