[package]
name = "agentmail-app"
version = "0.1.5"
edition = "2024"
rust-version = "1.94"
description = "MCP server and CLI for agentmail — connects AI agents to email via IMAP"
documentation = "https://docs.rs/agentmail-app"
readme = "../../README.md"
homepage = "https://github.com/weekendsuperhero-io/agentmail"
repository = "https://github.com/weekendsuperhero-io/agentmail"
license = "Apache-2.0"
keywords = ["agent", "cli", "email", "imap", "mcp"]
categories = ["command-line-utilities", "email"]

[lib]
name = "agentmail_mcp"
path = "src/lib.rs"

[[bin]]
name = "agentmail"
path = "src/main.rs"

[dependencies]
agentmail.workspace = true
clap.workspace = true
rmcp = { workspace = true, features = ["transport-async-rw", "transport-worker"] }
schemars.workspace = true
secret-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread"
] }
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
