[package]
name = "agentmail"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "A Rust IMAP client library for email management — read, search, delete, unsubscribe, and manage mailboxes"
repository = "https://github.com/weekendsuperhero-io/agentmail"
documentation = "https://docs.rs/agentmail"
homepage = "https://github.com/weekendsuperhero-io/agentmail"
readme = "../../README.md"
keywords = ["agent", "email", "imap", "mail", "mcp"]
categories = ["email", "network-programming"]
authors = ["WeekendSuperhero <hello@weekendsuperhero.io>"]
rust-version = "1.94"

[dependencies]
# IMAP protocol (tokio runtime, no async-std)
async-imap = { workspace = true, features = ["runtime-tokio"] }
chrono.workspace = true
dirs.workspace = true
# HTML to markdown conversion
fast_html2md = { workspace = true }
futures.workspace = true
hashbrown.workspace = true
# RFC822 message composition (for drafts)
lettre = { workspace = true, features = ["builder"] }
# Email parsing from raw RFC822
mail-parser = { workspace = true }
native-tls = { workspace = true }
reqwest.workspace = true
schemars.workspace = true
# Credential storage (raw, shell command, or system keyring)
secret-lib = { workspace = true, features = ["command", "derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
# TLS for IMAP connections (tokio-native)
tokio-native-tls = { workspace = true }
# Configuration file parsing
toml = { workspace = true }
tracing.workspace = true
