[package]
name = "agentmail"
version = "0.1.5"
edition = "2024"
rust-version = "1.94"
description = "A Rust IMAP client library for email management — read, search, delete, unsubscribe, and manage mailboxes"
documentation = "https://docs.rs/agentmail"
readme = "../../README.md"
homepage = "https://github.com/weekendsuperhero-io/agentmail"
repository = "https://github.com/weekendsuperhero-io/agentmail"
license = "Apache-2.0"
keywords = ["agent", "email", "imap", "mail", "mcp"]
categories = ["email", "network-programming"]

[dependencies]
# IMAP protocol (tokio runtime, no async-std)
async-imap = { workspace = true, features = ["runtime-tokio"] }
chrono.workspace = true
dirs.workspace = true
# HTML to markdown conversion
fast_html2md = { workspace = true }
futures.workspace = true
hashbrown.workspace = true
# RFC822 message composition (for drafts)
lettre = { workspace = true, features = ["builder"] }
# Email parsing from raw RFC822
mail-parser = { workspace = true }
native-tls = { workspace = true }
reqwest.workspace = true
schemars.workspace = true
# Credential storage (raw, shell command, or system keyring)
secret-lib = { workspace = true, features = ["command", "derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
# TLS for IMAP connections (tokio-native)
tokio-native-tls = { workspace = true }
# Configuration file parsing
toml = { workspace = true }
tracing.workspace = true

[lints]
workspace = true
